support very large sparselr model, ~400M weights in a 20 billion dimension